# GradientDescent

./: CMakeLists.txt  LICENSE  README.md  header.hpp  main.cpp
